# KVStash

./: .gitignore  .golangci.yml  .goreleaser.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  go.mod  go.sum  rules.go
.github/scripts/: check_imports.py  fuzz-short.sh
.github/workflows/: ci.yml  e2e-cpu.yml  fuzz.yml  nixl.yml  release.yml  vllm-matrix.yml  vllm-native-cpu.yml
adapters/nixl/: README.md  meson.build  meson.options
adapters/nixl/src/: executor.cpp  executor.h  kvblockd_backend.cpp  kvblockd_backend.h  kvblockd_client.cpp  kvblockd_client.h  kvblockd_plugin.cpp
adapters/nixl/test/: test_protocol.cpp  test_transfer.cpp
adapters/nixl/test/golden/: batch-get-request.hex  hello-request.hex  put-begin.hex
bench/: BENCHMARKS.md  METHODOLOGY.md
bench/baselines/: README.md  docker-compose.yml
bench/baselines/redis_py_driver/: driver.py
bench/e2e/: README.md  economics.py  isolation_demo.sh  kill9_demo.sh  versions.env  vllm-native-cpu.sh
bench/e2e/cpu/: import_check.py  import_check_vllm_native.py  install.sh  kv_transfer_kvblockd.json  kv_transfer_vllm_kvblockd.json  kvblockd.yaml  lmcache_kvblockd.yaml  namespaces.yaml  verify.py  versions.env
bench/e2e/sglang/: NOTES.md  import_check.py  run_multiturn.sh  runpod_down.sh  runpod_up.sh  versions.env
bench/kvbench/: README.md  convert.go  dial.go  fill.go  loopback.sh  main.go  replaycmd.go  report.go  sweep.go  verify.go
bench/kvbench/getbench/: main.go
bench/microbench/: README.md
bench/microbench/nvmeprobe/: io_linux.go  io_other.go  main.go  target.go  threadpool.go
bench/microbench/rawget/: main.go
bench/report/: plot.py  schema.md
bench/results/rig-t/: kvblockd.jsonl  redis-py.jsonl  redis.jsonl  valkey.jsonl
bench/rigs/: README.md  loopback-sweep.sh  sysctl-esnet.conf
bench/rigs/aws-dramgate/: g1-rawget-results.txt  g1-rawget.sh  gate-results.txt  run.sh
bench/rigs/aws-gpu/: README.md
bench/rigs/aws-nvme/: fio-ceiling.sh  nvmeprobe-results.jsonl  provision.sh  run-tier.sh  run.sh  teardown.sh  tier-results.txt
bench/rigs/aws-s3e2e/: run.sh  s3probe-results.jsonl  s3probe.go
bench/rigs/aws-s3soak/: collect.sh  run.sh
bench/rigs/aws-soak/: collect.sh  run.sh
bench/rigs/aws-transport/: iperf-ceiling.sh  iperf-ceiling.txt  provision.sh  run-chart1.sh  run.sh  teardown.sh  tune.sh  xferspike-results.jsonl
bench/soak/: mini.sh  soak.go
bench/traces/: README.md  fetch.sh
cmd/kvbctl/: cmd_data.go  cmd_ops.go  doc.go  main.go
cmd/kvblockd/: doc.go  main.go
cmd/xferspike/: arena_linux.go  arena_other.go  doc.go  drill_test.go  frame.go  main.go  soak.go  soak_test.go  spike.go  spike_test.go
config/: example.yaml  namespaces.yaml
deploy/: Dockerfile  kvblockd.service
deploy/grafana/: README.md  kvblockd-dashboard.json
deploy/helm/kvblockd/: Chart.yaml  values.yaml
docs/: BENCHMARKS.md  DESIGN.md  IMPROVEMENTS.md  INTEGRATIONS.md  PROTOCOL.md  ROADMAP.md  deployment-guide.md  review-ledger.md
docs/blog/: day-90-retro.md
docs/design/: sglang-hicache-v1.1.md
docs/notes/: a1-log.md  a2-log.md  a5-overlap-hooks.md  lmcache-head-verify.md
internal/config/: config.go  config_test.go  doc.go  example.yaml
internal/eviction/: doc.go  eviction.go  ghost.go  policy_rapid_test.go  s3fifo.go  s3fifo_test.go  sampledlru.go  sampledlru_test.go  touch_alloc_test.go
internal/metrics/: doc.go  metrics.go  metrics_test.go  tenantview_lock_test.go
internal/protocol/: batch.go  batch_test.go  bench_test.go  crc.go  doc.go  fuzz_test.go  golden_test.go  header.go  ops.go  protocol_test.go
internal/server/: admin.go  admin_test.go  bench_mixed_test.go  bench_pipeline_test.go  bench_pipeline_verbs_test.go  bench_put_exists_test.go  doc.go  dramwire_test.go  handlers.go  namespaces.go  putstream.go  reaper_internal_test.go  regression_test.go  s3compat.go  s3compat_test.go  server.go  server_test.go  session.go  tenancy_wire_test.go
internal/store/: assert_debug.go  assert_release.go  demote.go  demote_transfer_race_test.go  doc.go  exists_guard_test.go  nvmeindex.go  s3restore_test.go  s3tier.go  s3tier_test.go  spillflip_race_test.go  tiered.go  tiered_test.go
internal/store/dram/: arena.go  arena_linux.go  arena_test.go  (+20 more)
internal/tenant/: assert_debug.go  assert_release.go  doc.go  lockorder_test.go  quota.go  quota_test.go  registry.go  registry_test.go  underflow_debug_test.go  underflow_release_test.go
internal/transport/: bufsrc.go  conn.go  credit.go  credit_test.go  doc.go  listener.go  poison_debug.go  poison_release.go  poison_test.go  sockbuf_linux.go  sockbuf_other.go  transport_test.go
pkg/client/: client.go  client_test.go  doc.go  example_test.go  hashchain.go  hashchain_test.go  verbs.go
python/: README.md
python/kvblockd/: pyproject.toml
python/kvblockd/src/kvblockd/: __init__.py  client.py  errors.py  hashing.py  pool.py  protocol.py
python/kvblockd/tests/: conftest.py  test_client_daemon.py  test_hash_parity.py  test_protocol.py
python/kvblockd/tests/golden/: hash_chain.json
python/kvblockd/tools/: kvops_replay.py
python/lmcache_kvblockd/: pyproject.toml
python/lmcache_kvblockd/src/lmcache_kvblockd/: __init__.py  adapter.py  connector.py  meta.py
python/lmcache_kvblockd/tests/: test_connector_unit.py  test_meta.py
python/sglang_kvblockd/: pyproject.toml
python/sglang_kvblockd/src/sglang_kvblockd/: __init__.py  _compat.py  backend.py  keymap.py
python/sglang_kvblockd/tests/: conftest.py  test_backend_cpu.py  test_keymap.py
python/sglang_kvblockd/tests/golden/: sglang_keymap.json
python/vllm_kvblockd/: DEFER.md  pyproject.toml
python/vllm_kvblockd/src/vllm_kvblockd/: __init__.py  config.py  connector.py  tier_manager.py
python/vllm_kvblockd/tests/: conftest.py  test_config.py  test_connector.py  test_tier_manager.py
python/vllm_kvblockd/tests/golden/: vllm_fingerprint.json
scripts/: install.sh  triplet-snapshot.sh  wait-healthz.sh  wait-http.sh
test/crash/: torture.go
test/integration/: exists_latency_test.go
test/release/: assert_static.sh
tools/calculator/: index.html
(+130 files in other folders)
